packages/editor/src/css/style_elements_jquery.less
/* ... */
.ui-tabs {
  .ui-tabs-nav {
    border-radius: 0;
  }
}

/**
 * JQUERY HORIZONTAL UI TABS
 */
.ui-tabs.tabs_horizontal {
  > ul {
    padding: 0px 0px 0px 0.5em;
  }
  .ui-tabs-panel {
    margin-top: 0.5em;

    &.ui-tabs-noscroll {
      padding: 0;
    }
  }
}

/**
 * JQUERY VERTICAL UI TABS
 */
.ui-tabs.tabs_vertical {
  position: relative;
  margin: 1em 0;
  > ul {
    margin: 0;
    padding: 0;
    text-align: left;
    float: left;
    li {
      width: @elysia_nodes_property_label-width + 1em;
      list-style-type: none;
      padding: 0.5em 1em;
      margin: 0;
      text-align: right;
      &.ui-state-active {
        background-color: @accent-color;
        font-weight: bold;
        border-radius: @standard-border-radius 0 0 @standard-border-radius;
        a {
          color: @text-color;
        }
      }
    }
  }
  .ui-tabs-panel {
    background: @background-color;
    border: 1px solid @accent-color;
    padding: 0.5em 1em;
    margin: 0.5em 0;
    overflow: auto;
    &.ui-tabs-noscroll {
      padding: 0;
    }
  }
}

.ui-tooltip {
  // TODO
  .win();
  max-width: 300px;
  padding: 0.5em;
  z-index: @zindex-tooltip;
}

.ui-spinner {
  display: block;
  margin: @input-margin-top 0 @input-margin-bottom 0;
  padding: 0;
  position: relative;

  // hides natives spinner on Chrome, FF and the "clear-cross" by IE10-11
  input[type='number'] {
    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
      -webkit-appearance: none;
      margin: 0;
    }
    &::-ms-clear {
      width: 0;
      height: 0;
    }
    -moz-appearance: textfield;
  }
  .ui-spinner-input {
    margin: 0;
    margin-right: 2em;
    // overlapping rounded corners
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
  }
  .ui-spinner-button {
    width: 2.5em;
    height: 50%;
    min-height: inherit;
    padding: 0;
    margin: 0;
    position: absolute;
    right: 0;
    line-height: 1em;
    cursor: pointer;
    .ui-icon {
      display: none;
    }
  }
  .ui-spinner-up {
    top: 0;
    border-bottom: none;
    border-radius: 0 @button-border-radius 0 0;
    .ui-button-text:after {
      content: '';
      display: inline-block;
      width: 0.8em;
      height: 0.8em;
      background-color: currentColor;
      -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m18 15-6-6-6 6'/%3E%3C/svg%3E");
      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m18 15-6-6-6 6'/%3E%3C/svg%3E");
      -webkit-mask-repeat: no-repeat;
      mask-repeat: no-repeat;
      -webkit-mask-size: contain;
      mask-size: contain;
    }
  }
  .ui-spinner-down {
    bottom: 0;
    border-top: none;
    border-radius: 0 0 @button-border-radius 0;
    .ui-button-text:after {
      content: '';
      display: inline-block;
      width: 0.8em;
      height: 0.8em;
      background-color: currentColor;
      -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m6 9 6 6 6-6'/%3E%3C/svg%3E");
      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m6 9 6 6 6-6'/%3E%3C/svg%3E");
      -webkit-mask-repeat: no-repeat;
      mask-repeat: no-repeat;
      -webkit-mask-size: contain;
      mask-size: contain;
    }
  }
}

.ui-icon {
  background: none repeat scroll 0 0 transparent;
  text-indent: 0;
  width: auto;
  height: auto;
  min-width: 16px;

  vertical-align: middle;
  margin-top: 0;
  margin-right: 0.5em;
}
.ui-icon-closethick {
  // Use CSS mask for Lucide X icon
  display: inline-block;
  width: 1em;
  height: 1em;
  background-color: currentColor;
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M18 6 6 18'/%3E%3Cpath d='m6 6 12 12'/%3E%3C/svg%3E");
  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M18 6 6 18'/%3E%3Cpath d='m6 6 12 12'/%3E%3C/svg%3E");
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-size: contain;
  mask-size: contain;
}
.ui-icon-closethick:before {
  content: '';
}

.ui-draggable .ui-dialog-titlebar {
  cursor: move;
}
.ui-draggable-handle,
.ui-sortable-handle {
  -ms-touch-action: none;
  touch-action: none;
}

